--- a/intro_to_machine_learning.ipynb
+++ b/intro_to_machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM4z5l5hiFvhIbup0dGIoWQ",
+      "authorship_tag": "ABX9TyPM32obPO6BYoLb9pUnBosT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "LKFqO6Wd0ONB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0fbf40e1-82e5-462d-d99a-9a4c84cbe64d"
+        "outputId": "c73101b8-5505-4e71-879b-d2c61394d00f"
       },
       "outputs": [
         {
@@ -426,12 +426,101 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#element wise matrix multiplication\n",
+        "tensor1=torch.tensor([1,2,3])\n",
+        "tensor2=torch.tensor([4,5,6])\n",
+        "print(f\"{tensor1}*{tensor2}={tensor1*tensor2}\")\n"
+      ],
       "metadata": {
-        "id": "E7KQTQL7CUut"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7KQTQL7CUut",
+        "outputId": "eb21c057-f927-4742-b692-4d6f386fe73a"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3])*tensor([4, 5, 6])=tensor([ 4, 10, 18])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dot product of tensors"
+      ],
+      "metadata": {
+        "id": "K9acs_2nI09m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tensor1.matmul(tensor2))\n",
+        "print(\"note that 32=4+10+18\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7FSlHpuWI400",
+        "outputId": "6c42bf4a-0b00-473e-b84e-2988c4f07dde"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(32)\n",
+            "note that 32=4+10+18\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor1=torch.randint(low=0,high=5,size=(2,3))\n",
+        "tensor2=torch.randint(low=0,high=5,size=(3,4))\n",
+        "print(\"tensor1:\")\n",
+        "print(tensor1)\n",
+        "print(\"tensor2:\")\n",
+        "print(tensor2)\n",
+        "print(f\"tensor1 x tensor2 =\\n{tensor1.matmul(tensor2)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zCclFlNeJXia",
+        "outputId": "51e91ed8-46e7-4304-f7e3-8aa57aace90b"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor1:\n",
+            "tensor([[0, 3, 3],\n",
+            "        [0, 3, 1]])\n",
+            "tensor2:\n",
+            "tensor([[3, 3, 3, 4],\n",
+            "        [0, 0, 2, 1],\n",
+            "        [4, 3, 4, 4]])\n",
+            "tensor1 x tensor2 =\n",
+            "tensor([[12,  9, 18, 15],\n",
+            "        [ 4,  3, 10,  7]])\n"
+          ]
+        }
+      ]
     }
   ]
 }
