--- a/intro_to_machine_learning.ipynb
+++ b/intro_to_machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPM32obPO6BYoLb9pUnBosT",
+      "authorship_tag": "ABX9TyNhhlouIdv4HBvyPwWpbeud",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "LKFqO6Wd0ONB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c73101b8-5505-4e71-879b-d2c61394d00f"
+        "outputId": "1c11ef3c-e5b7-4ce2-a8fd-8cb414141cc1"
       },
       "outputs": [
         {
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RmOjq1NN00O3",
-        "outputId": "258e4935-901e-42bd-808a-37d66368b29c"
+        "outputId": "a70a72bb-3baf-4fb9-896b-f3b874851c17"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,9 +103,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a59e1fde-a6bb-4080-bef5-d45886182177"
+        "outputId": "62291e13-ae22-4af3-c1b0-350849b9e0db"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +144,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oMO73v7Qb5jP",
-        "outputId": "95ff2c1b-5948-413a-81d1-115e6d830b2a"
+        "outputId": "c0e5ab05-109d-469a-cfc0-896bc64cf71d"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,29 +183,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t8AaiY2zRXLk",
-        "outputId": "1773a5d7-bfb8-4c5f-b5da-fca31b856802"
+        "outputId": "7e99596b-6d6e-48cd-8f69-2e2af9b50793"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.0287, 0.6924, 0.7679],\n",
-            "         [0.5430, 0.1697, 0.6355],\n",
-            "         [0.9395, 0.5599, 0.1460]],\n",
+            "tensor([[[0.9765, 0.4750, 0.4945],\n",
+            "         [0.9440, 0.3850, 0.3169],\n",
+            "         [0.4955, 0.9334, 0.8088]],\n",
             "\n",
-            "        [[0.4752, 0.2467, 0.5950],\n",
-            "         [0.0485, 0.6666, 0.1551],\n",
-            "         [0.2903, 0.3194, 0.6047]],\n",
+            "        [[0.0157, 0.9532, 0.7681],\n",
+            "         [0.0267, 0.4719, 0.2537],\n",
+            "         [0.6471, 0.6080, 0.4251]],\n",
             "\n",
-            "        [[0.3578, 0.2227, 0.8046],\n",
-            "         [0.1079, 0.3525, 0.6358],\n",
-            "         [0.0199, 0.3903, 0.3667]],\n",
+            "        [[0.3490, 0.8143, 0.4270],\n",
+            "         [0.9217, 0.9240, 0.1643],\n",
+            "         [0.9107, 0.3223, 0.8080]],\n",
             "\n",
-            "        [[0.7255, 0.9801, 0.5309],\n",
-            "         [0.3363, 0.0554, 0.5704],\n",
-            "         [0.4259, 0.3452, 0.2257]]])\n"
+            "        [[0.5301, 0.2126, 0.2722],\n",
+            "         [0.4820, 0.8461, 0.8014],\n",
+            "         [0.3683, 0.2885, 0.2289]]])\n"
           ]
         }
       ]
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iEunC9EfTG-C",
-        "outputId": "b3859cbc-2602-4219-b08f-4025c99e9058"
+        "outputId": "ee0f2ec5-694f-4a48-beb8-15f94f65790d"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X-moz0JuUdth",
-        "outputId": "751fa676-94e0-45d2-ce41-b68524087632"
+        "outputId": "c3c14e20-3904-492e-f664-c866cf72a094"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ouv7ipUvV02j",
-        "outputId": "32c5dfa9-824b-4b8a-b979-bb2387a1f953"
+        "outputId": "dd570a0f-ab00-493f-ddb2-b641f0a67b49"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,29 +346,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "at0mecvdXZx5",
-        "outputId": "19151f05-1a28-4a4b-822f-4d809737d91b"
+        "outputId": "dc7f893e-635b-41b8-ecc3-460e9f4a20b5"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.1300, 0.7365, 0.1635],\n",
-            "         [0.3754, 0.9372, 0.3068],\n",
-            "         [0.3763, 0.5386, 0.4554]],\n",
+            "tensor([[[0.6243, 0.7747, 0.3761],\n",
+            "         [0.8427, 0.2766, 0.2829],\n",
+            "         [0.3185, 0.5819, 0.1375]],\n",
             "\n",
-            "        [[0.6275, 0.7632, 0.1902],\n",
-            "         [0.8192, 0.2178, 0.0319],\n",
-            "         [0.6284, 0.9733, 0.2281]],\n",
+            "        [[0.4087, 0.9808, 0.6963],\n",
+            "         [0.9542, 0.4102, 0.9638],\n",
+            "         [0.7390, 0.8528, 0.1041]],\n",
             "\n",
-            "        [[0.2361, 0.6958, 0.2677],\n",
-            "         [0.1398, 0.3941, 0.9223],\n",
-            "         [0.7603, 0.9117, 0.1485]],\n",
+            "        [[0.7169, 0.4065, 0.0201],\n",
+            "         [0.9874, 0.7025, 0.8486],\n",
+            "         [0.8138, 0.5847, 0.6472]],\n",
             "\n",
-            "        [[0.2584, 0.1958, 0.1128],\n",
-            "         [0.7975, 0.1086, 0.0119],\n",
-            "         [0.5633, 0.2862, 0.6784]]])\n"
+            "        [[0.9502, 0.5242, 0.6382],\n",
+            "         [0.7719, 0.7837, 0.3171],\n",
+            "         [0.7428, 0.3891, 0.0130]]])\n"
           ]
         }
       ]
@@ -398,9 +398,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W9XYw6aT_7Mk",
-        "outputId": "b3a9064c-24b9-4b60-8ba9-d2d8990d5a61"
+        "outputId": "f15f002b-3f94-4030-fa40-668fca705310"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,9 +437,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E7KQTQL7CUut",
-        "outputId": "eb21c057-f927-4742-b692-4d6f386fe73a"
+        "outputId": "aff04b91-ccd7-442a-bb82-51bd8f22f8fd"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,9 +470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7FSlHpuWI400",
-        "outputId": "6c42bf4a-0b00-473e-b84e-2988c4f07dde"
+        "outputId": "90d0ca9c-cea0-4318-e438-f31a8f6b43a2"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zCclFlNeJXia",
-        "outputId": "51e91ed8-46e7-4304-f7e3-8aa57aace90b"
+        "outputId": "fc36f056-48e0-43e1-9a2c-22e10925c832"
       },
       "execution_count": 13,
       "outputs": [
@@ -509,15 +509,117 @@
           "name": "stdout",
           "text": [
             "tensor1:\n",
-            "tensor([[0, 3, 3],\n",
-            "        [0, 3, 1]])\n",
+            "tensor([[3, 4, 0],\n",
+            "        [0, 1, 3]])\n",
             "tensor2:\n",
-            "tensor([[3, 3, 3, 4],\n",
-            "        [0, 0, 2, 1],\n",
+            "tensor([[2, 1, 1, 1],\n",
+            "        [3, 0, 4, 0],\n",
             "        [4, 3, 4, 4]])\n",
             "tensor1 x tensor2 =\n",
-            "tensor([[12,  9, 18, 15],\n",
-            "        [ 4,  3, 10,  7]])\n"
+            "tensor([[18,  3, 19,  3],\n",
+            "        [15,  9, 16, 12]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finding min , max , mean , sum of tensors (tensor aggregation)"
+      ],
+      "metadata": {
+        "id": "_oWEY7KCn-HO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"tensor: \")\n",
+        "print(tensor1)\n",
+        "print(f\"min : {tensor1.min()}\")\n",
+        "print(f\"max : {tensor1.max()}\")\n",
+        "print(f\"mean : {tensor1.type(torch.float32).mean()}\")   #note mean requires float32 type tensor\n",
+        "\n",
+        "#to change data type of a tensor write\n",
+        "print(\"float 32 tensor is: \")\n",
+        "print(tensor1.type(torch.float32))"
+      ],
+      "metadata": {
+        "id": "9qRgQTneoH86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5606efe-384a-41ca-af58-e75b125b6913"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor: \n",
+            "tensor([[3, 4, 0],\n",
+            "        [0, 1, 3]])\n",
+            "min : 0\n",
+            "max : 4\n",
+            "mean : 1.8333333730697632\n",
+            "float 32 tensor is: \n",
+            "tensor([[3., 4., 0.],\n",
+            "        [0., 1., 3.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Positional min and max**\n",
+        "find the position of minimum and maximum element in the tensor.\n",
+        "use argmin() and argmax() functions"
+      ],
+      "metadata": {
+        "id": "d9l9ME6gW4Sv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"tensor:\\n{tensor1}\")\n",
+        "print(f\"min index : {tensor1.argmin()} and minimum element is {tensor1.min()}\")\n",
+        "print(f\"max index : {tensor1.argmax()} and maximum element is {tensor1.max()}\")\n",
+        "\n",
+        "tensor2=torch.tensor([[1,3,5],\n",
+        "                      [6,1,3]])\n",
+        "print(\"\\n\")\n",
+        "print(f\"tensor:\\n{tensor2}\")\n",
+        "print(f\"min index : {tensor2.argmin()} and minimum element is {tensor2.min()}\")\n",
+        "print(f\"max index : {tensor2.argmax()} and maximum element is {tensor2.max()}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PqSyjVQlWqMx",
+        "outputId": "b0a50844-e0f5-4a48-a941-1494f4b85e55"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor:\n",
+            "tensor([[3, 4, 0],\n",
+            "        [0, 1, 3]])\n",
+            "min index : 2 and minimum element is 0\n",
+            "max index : 1 and maximum element is 4\n",
+            "\n",
+            "\n",
+            "tensor:\n",
+            "tensor([[1, 3, 5],\n",
+            "        [6, 1, 3]])\n",
+            "min index : 0 and minimum element is 1\n",
+            "max index : 3 and maximum element is 6\n"
           ]
         }
       ]
