--- a/intro_to_machine_learning.ipynb
+++ b/intro_to_machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNhhlouIdv4HBvyPwWpbeud",
+      "authorship_tag": "ABX9TyNkVm3y8G65Xkck45YDvr/l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "LKFqO6Wd0ONB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c11ef3c-e5b7-4ce2-a8fd-8cb414141cc1"
+        "outputId": "67131113-3861-4913-f4a2-ef177ce23ffa"
       },
       "outputs": [
         {
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RmOjq1NN00O3",
-        "outputId": "a70a72bb-3baf-4fb9-896b-f3b874851c17"
+        "outputId": "ac021796-1846-4168-bfc3-f619d015c7fa"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,9 +103,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62291e13-ae22-4af3-c1b0-350849b9e0db"
+        "outputId": "a1a4cfb7-9511-45df-9633-7f1bcd5c1dc1"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +144,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oMO73v7Qb5jP",
-        "outputId": "c0e5ab05-109d-469a-cfc0-896bc64cf71d"
+        "outputId": "122f5725-9c54-4d39-90f3-6c97af102c42"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,29 +183,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t8AaiY2zRXLk",
-        "outputId": "7e99596b-6d6e-48cd-8f69-2e2af9b50793"
+        "outputId": "aebf9aa5-b402-4127-9fe3-ac050b09fd4a"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.9765, 0.4750, 0.4945],\n",
-            "         [0.9440, 0.3850, 0.3169],\n",
-            "         [0.4955, 0.9334, 0.8088]],\n",
+            "tensor([[[0.1397, 0.5479, 0.0854],\n",
+            "         [0.2239, 0.8903, 0.5136],\n",
+            "         [0.6869, 0.0796, 0.2853]],\n",
             "\n",
-            "        [[0.0157, 0.9532, 0.7681],\n",
-            "         [0.0267, 0.4719, 0.2537],\n",
-            "         [0.6471, 0.6080, 0.4251]],\n",
+            "        [[0.0055, 0.1481, 0.7302],\n",
+            "         [0.3547, 0.5276, 0.8882],\n",
+            "         [0.0181, 0.0804, 0.8437]],\n",
             "\n",
-            "        [[0.3490, 0.8143, 0.4270],\n",
-            "         [0.9217, 0.9240, 0.1643],\n",
-            "         [0.9107, 0.3223, 0.8080]],\n",
+            "        [[0.5183, 0.3224, 0.3596],\n",
+            "         [0.0097, 0.7672, 0.2761],\n",
+            "         [0.1389, 0.2322, 0.1007]],\n",
             "\n",
-            "        [[0.5301, 0.2126, 0.2722],\n",
-            "         [0.4820, 0.8461, 0.8014],\n",
-            "         [0.3683, 0.2885, 0.2289]]])\n"
+            "        [[0.3289, 0.7317, 0.0948],\n",
+            "         [0.5507, 0.4067, 0.1304],\n",
+            "         [0.6642, 0.7919, 0.0703]]])\n"
           ]
         }
       ]
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iEunC9EfTG-C",
-        "outputId": "ee0f2ec5-694f-4a48-beb8-15f94f65790d"
+        "outputId": "248a83ff-89c8-443a-afe6-9de283fd833a"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X-moz0JuUdth",
-        "outputId": "c3c14e20-3904-492e-f664-c866cf72a094"
+        "outputId": "0743b96f-b590-4e5a-ef96-a840e09a2f88"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ouv7ipUvV02j",
-        "outputId": "dd570a0f-ab00-493f-ddb2-b641f0a67b49"
+        "outputId": "dbb13b76-6ada-427a-d5bd-3ce84c135a96"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,29 +346,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "at0mecvdXZx5",
-        "outputId": "dc7f893e-635b-41b8-ecc3-460e9f4a20b5"
+        "outputId": "b4646a38-5854-49aa-cc45-d2a54f205cd3"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.6243, 0.7747, 0.3761],\n",
-            "         [0.8427, 0.2766, 0.2829],\n",
-            "         [0.3185, 0.5819, 0.1375]],\n",
+            "tensor([[[0.1116, 0.5543, 0.6756],\n",
+            "         [0.1522, 0.7549, 0.4520],\n",
+            "         [0.2180, 0.5062, 0.6830]],\n",
             "\n",
-            "        [[0.4087, 0.9808, 0.6963],\n",
-            "         [0.9542, 0.4102, 0.9638],\n",
-            "         [0.7390, 0.8528, 0.1041]],\n",
+            "        [[0.9105, 0.7631, 0.1681],\n",
+            "         [0.4750, 0.8319, 0.4886],\n",
+            "         [0.7988, 0.3097, 0.4728]],\n",
             "\n",
-            "        [[0.7169, 0.4065, 0.0201],\n",
-            "         [0.9874, 0.7025, 0.8486],\n",
-            "         [0.8138, 0.5847, 0.6472]],\n",
+            "        [[0.6464, 0.6604, 0.5675],\n",
+            "         [0.4440, 0.2182, 0.9497],\n",
+            "         [0.0089, 0.5283, 0.2284]],\n",
             "\n",
-            "        [[0.9502, 0.5242, 0.6382],\n",
-            "         [0.7719, 0.7837, 0.3171],\n",
-            "         [0.7428, 0.3891, 0.0130]]])\n"
+            "        [[0.6635, 0.1583, 0.9920],\n",
+            "         [0.8167, 0.0999, 0.5537],\n",
+            "         [0.9770, 0.6508, 0.1503]]])\n"
           ]
         }
       ]
@@ -398,9 +398,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W9XYw6aT_7Mk",
-        "outputId": "f15f002b-3f94-4030-fa40-668fca705310"
+        "outputId": "818bfa3e-2045-4298-f27d-7d160d3803d9"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,9 +437,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E7KQTQL7CUut",
-        "outputId": "aff04b91-ccd7-442a-bb82-51bd8f22f8fd"
+        "outputId": "4300b31c-53a3-4819-b269-530f9e4ccc6e"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,9 +470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7FSlHpuWI400",
-        "outputId": "90d0ca9c-cea0-4318-e438-f31a8f6b43a2"
+        "outputId": "10204852-3f30-4094-8f33-58dfa2f860b8"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,24 +500,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zCclFlNeJXia",
-        "outputId": "fc36f056-48e0-43e1-9a2c-22e10925c832"
+        "outputId": "7554614e-9975-4569-a272-38f743670bde"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tensor1:\n",
-            "tensor([[3, 4, 0],\n",
-            "        [0, 1, 3]])\n",
+            "tensor([[1, 0, 0],\n",
+            "        [1, 0, 0]])\n",
             "tensor2:\n",
-            "tensor([[2, 1, 1, 1],\n",
-            "        [3, 0, 4, 0],\n",
-            "        [4, 3, 4, 4]])\n",
+            "tensor([[4, 3, 2, 4],\n",
+            "        [2, 3, 2, 2],\n",
+            "        [2, 1, 3, 3]])\n",
             "tensor1 x tensor2 =\n",
-            "tensor([[18,  3, 19,  3],\n",
-            "        [15,  9, 16, 12]])\n"
+            "tensor([[4, 3, 2, 4],\n",
+            "        [4, 3, 2, 4]])\n"
           ]
         }
       ]
@@ -549,23 +549,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5606efe-384a-41ca-af58-e75b125b6913"
+        "outputId": "84b04be2-75d9-41e8-ee4f-e4f2cb41318a"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tensor: \n",
-            "tensor([[3, 4, 0],\n",
-            "        [0, 1, 3]])\n",
+            "tensor([[1, 0, 0],\n",
+            "        [1, 0, 0]])\n",
             "min : 0\n",
-            "max : 4\n",
-            "mean : 1.8333333730697632\n",
+            "max : 1\n",
+            "mean : 0.3333333432674408\n",
             "float 32 tensor is: \n",
-            "tensor([[3., 4., 0.],\n",
-            "        [0., 1., 3.]])\n"
+            "tensor([[1., 0., 0.],\n",
+            "        [1., 0., 0.]])\n"
           ]
         }
       ]
@@ -600,19 +600,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqSyjVQlWqMx",
-        "outputId": "b0a50844-e0f5-4a48-a941-1494f4b85e55"
+        "outputId": "5758332a-b359-4b36-c630-1458d262d043"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tensor:\n",
-            "tensor([[3, 4, 0],\n",
-            "        [0, 1, 3]])\n",
-            "min index : 2 and minimum element is 0\n",
-            "max index : 1 and maximum element is 4\n",
+            "tensor([[1, 0, 0],\n",
+            "        [1, 0, 0]])\n",
+            "min index : 1 and minimum element is 0\n",
+            "max index : 0 and maximum element is 1\n",
             "\n",
             "\n",
             "tensor:\n",
@@ -620,6 +620,191 @@
             "        [6, 1, 3]])\n",
             "min index : 0 and minimum element is 1\n",
             "max index : 3 and maximum element is 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#reshaping stacking squezing and unsquezing tensors\n",
+        "\n",
+        "\n",
+        "1.   **reshaping** - change the shape of tensor to a new shape\n",
+        "2. **view** - view a tensor in new shape but it change the original tensor\n",
+        "3.   **stacking** - combining multiple tensors on top of each other-(vstack)   side by side-(hstack)\n",
+        "4.  **squeze**- remove 1 dimension from tensor\n",
+        "5.  **unsqueze** - add 1 dimension to a tensor\n",
+        "6. **permute**- return the view of input with dimensions permutted i,e swapped in a certain way.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "riKyeRPZc9_h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=torch.arange(1,10,1)\n",
+        "print(x)\n",
+        "y=x.reshape(3,3) #note new dimensions must be compatible with the old dimensions you cannot provide new dimensions like  1,7 since 1*7=7 and we have 9 elements in our tensor\n",
+        "print(\"tensor reshaped as (3,3)\")\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qOt7ABkGe6Ix",
+        "outputId": "a0ac8a4e-075d-4e20-f859-16bb6d622512"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+            "tensor reshaped as (3,3)\n",
+            "tensor([[1, 2, 3],\n",
+            "        [4, 5, 6],\n",
+            "        [7, 8, 9]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#view\n",
+        "print(x)\n",
+        "z=x.view(3,3)\n",
+        "print(x)\n",
+        "print(z)\n",
+        "z[0]=5\n",
+        "print(x)\n",
+        "print(z)\n",
+        "#x and z shares the same location and hence changing z will change x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYCaoGWQitEu",
+        "outputId": "11353175-dcc5-496e-d59e-d0813eb586b9"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+            "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+            "tensor([[1, 2, 3],\n",
+            "        [4, 5, 6],\n",
+            "        [7, 8, 9]])\n",
+            "tensor([5, 5, 5, 4, 5, 6, 7, 8, 9])\n",
+            "tensor([[5, 5, 5],\n",
+            "        [4, 5, 6],\n",
+            "        [7, 8, 9]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#stack tensors on top of each other\n",
+        "print(x,\"\\n\")\n",
+        "z=torch.stack([x,x])\n",
+        "print(z,\"\\n\")\n",
+        "z=torch.stack([x,x,x])\n",
+        "print(z,\"\\n\")\n",
+        "z=torch.stack([x,x],dim=1)\n",
+        "print(z,\"\\n\")\n",
+        "z=torch.stack([x,x,x],dim=1)\n",
+        "print(z,\"\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d1o2tQB-kVjM",
+        "outputId": "d74c9c71-7335-4a51-c83b-b43129e6e135"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([5, 5, 5, 4, 5, 6, 7, 8, 9]) \n",
+            "\n",
+            "tensor([[5, 5, 5, 4, 5, 6, 7, 8, 9],\n",
+            "        [5, 5, 5, 4, 5, 6, 7, 8, 9]]) \n",
+            "\n",
+            "tensor([[5, 5, 5, 4, 5, 6, 7, 8, 9],\n",
+            "        [5, 5, 5, 4, 5, 6, 7, 8, 9],\n",
+            "        [5, 5, 5, 4, 5, 6, 7, 8, 9]]) \n",
+            "\n",
+            "tensor([[5, 5],\n",
+            "        [5, 5],\n",
+            "        [5, 5],\n",
+            "        [4, 4],\n",
+            "        [5, 5],\n",
+            "        [6, 6],\n",
+            "        [7, 7],\n",
+            "        [8, 8],\n",
+            "        [9, 9]]) \n",
+            "\n",
+            "tensor([[5, 5, 5],\n",
+            "        [5, 5, 5],\n",
+            "        [5, 5, 5],\n",
+            "        [4, 4, 4],\n",
+            "        [5, 5, 5],\n",
+            "        [6, 6, 6],\n",
+            "        [7, 7, 7],\n",
+            "        [8, 8, 8],\n",
+            "        [9, 9, 9]]) \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#squezing tensors\n",
+        "print(x,\"\\n\")\n",
+        "z=x+2\n",
+        "z=torch.stack([x,z,z*2])\n",
+        "print(z,\"\\n\")\n",
+        "print(z.squeeze(),\"\\n\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k8MsDwtymt5q",
+        "outputId": "b5a46476-1b6e-4080-9aa9-61a53a2af89c"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([5, 5, 5, 4, 5, 6, 7, 8, 9]) \n",
+            "\n",
+            "tensor([[ 5,  5,  5,  4,  5,  6,  7,  8,  9],\n",
+            "        [ 7,  7,  7,  6,  7,  8,  9, 10, 11],\n",
+            "        [14, 14, 14, 12, 14, 16, 18, 20, 22]]) \n",
+            "\n",
+            "tensor([[ 5,  5,  5,  4,  5,  6,  7,  8,  9],\n",
+            "        [ 7,  7,  7,  6,  7,  8,  9, 10, 11],\n",
+            "        [14, 14, 14, 12, 14, 16, 18, 20, 22]]) \n",
+            "\n"
           ]
         }
       ]
