--- a/intro_to_machine_learning.ipynb
+++ b/intro_to_machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNkVm3y8G65Xkck45YDvr/l",
+      "authorship_tag": "ABX9TyNwovEp+IRdJzZQ0eEFcN0B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "LKFqO6Wd0ONB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "67131113-3861-4913-f4a2-ef177ce23ffa"
+        "outputId": "513980f3-121a-42f7-96c2-22b08b05d6c8"
       },
       "outputs": [
         {
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RmOjq1NN00O3",
-        "outputId": "ac021796-1846-4168-bfc3-f619d015c7fa"
+        "outputId": "c591b4cb-9498-47e7-fd12-e414258be3b7"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,9 +103,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1a4cfb7-9511-45df-9633-7f1bcd5c1dc1"
+        "outputId": "0a88ce1c-340a-40c1-ce07-57e7c5cdb530"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +144,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oMO73v7Qb5jP",
-        "outputId": "122f5725-9c54-4d39-90f3-6c97af102c42"
+        "outputId": "351ac7dc-b523-4265-fce4-a2af2bacac8b"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,29 +183,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t8AaiY2zRXLk",
-        "outputId": "aebf9aa5-b402-4127-9fe3-ac050b09fd4a"
+        "outputId": "1325478b-9965-498e-b22d-af44a7444f44"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.1397, 0.5479, 0.0854],\n",
-            "         [0.2239, 0.8903, 0.5136],\n",
-            "         [0.6869, 0.0796, 0.2853]],\n",
+            "tensor([[[0.7381, 0.5394, 0.3507],\n",
+            "         [0.0861, 0.5097, 0.7559],\n",
+            "         [0.7506, 0.8077, 0.4990]],\n",
             "\n",
-            "        [[0.0055, 0.1481, 0.7302],\n",
-            "         [0.3547, 0.5276, 0.8882],\n",
-            "         [0.0181, 0.0804, 0.8437]],\n",
+            "        [[0.1851, 0.0138, 0.9520],\n",
+            "         [0.3898, 0.0571, 0.7660],\n",
+            "         [0.4972, 0.1974, 0.1110]],\n",
             "\n",
-            "        [[0.5183, 0.3224, 0.3596],\n",
-            "         [0.0097, 0.7672, 0.2761],\n",
-            "         [0.1389, 0.2322, 0.1007]],\n",
+            "        [[0.0412, 0.4118, 0.3240],\n",
+            "         [0.5922, 0.0600, 0.2629],\n",
+            "         [0.8148, 0.3520, 0.7463]],\n",
             "\n",
-            "        [[0.3289, 0.7317, 0.0948],\n",
-            "         [0.5507, 0.4067, 0.1304],\n",
-            "         [0.6642, 0.7919, 0.0703]]])\n"
+            "        [[0.8039, 0.8597, 0.2476],\n",
+            "         [0.8155, 0.5481, 0.1950],\n",
+            "         [0.8679, 0.8321, 0.1402]]])\n"
           ]
         }
       ]
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iEunC9EfTG-C",
-        "outputId": "248a83ff-89c8-443a-afe6-9de283fd833a"
+        "outputId": "0de21989-24d0-4c33-a3f3-7c0ef1dda3fe"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X-moz0JuUdth",
-        "outputId": "0743b96f-b590-4e5a-ef96-a840e09a2f88"
+        "outputId": "7fda44e7-f1af-4717-84d2-2eaed52ee4ac"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ouv7ipUvV02j",
-        "outputId": "dbb13b76-6ada-427a-d5bd-3ce84c135a96"
+        "outputId": "589d7068-800a-40a1-f684-2cef79690392"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,29 +346,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "at0mecvdXZx5",
-        "outputId": "b4646a38-5854-49aa-cc45-d2a54f205cd3"
+        "outputId": "a9d27ccd-334c-4f00-a2e1-31778291a32a"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[0.1116, 0.5543, 0.6756],\n",
-            "         [0.1522, 0.7549, 0.4520],\n",
-            "         [0.2180, 0.5062, 0.6830]],\n",
+            "tensor([[[0.5022, 0.1645, 0.2412],\n",
+            "         [0.7365, 0.6141, 0.4867],\n",
+            "         [0.9474, 0.7910, 0.0257]],\n",
             "\n",
-            "        [[0.9105, 0.7631, 0.1681],\n",
-            "         [0.4750, 0.8319, 0.4886],\n",
-            "         [0.7988, 0.3097, 0.4728]],\n",
+            "        [[0.6388, 0.8525, 0.1172],\n",
+            "         [0.2415, 0.1868, 0.9572],\n",
+            "         [0.6839, 0.8922, 0.6620]],\n",
             "\n",
-            "        [[0.6464, 0.6604, 0.5675],\n",
-            "         [0.4440, 0.2182, 0.9497],\n",
-            "         [0.0089, 0.5283, 0.2284]],\n",
+            "        [[0.1571, 0.3223, 0.6591],\n",
+            "         [0.3043, 0.4206, 0.1749],\n",
+            "         [0.7749, 0.5894, 0.6543]],\n",
             "\n",
-            "        [[0.6635, 0.1583, 0.9920],\n",
-            "         [0.8167, 0.0999, 0.5537],\n",
-            "         [0.9770, 0.6508, 0.1503]]])\n"
+            "        [[0.1144, 0.5178, 0.6658],\n",
+            "         [0.2549, 0.0770, 0.9814],\n",
+            "         [0.6947, 0.5770, 0.2638]]])\n"
           ]
         }
       ]
@@ -398,9 +398,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W9XYw6aT_7Mk",
-        "outputId": "818bfa3e-2045-4298-f27d-7d160d3803d9"
+        "outputId": "8b20e4a9-7161-4f5e-c146-12bf6e06b0d5"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,9 +437,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E7KQTQL7CUut",
-        "outputId": "4300b31c-53a3-4819-b269-530f9e4ccc6e"
+        "outputId": "9e209842-2e4b-47ad-8583-dcbd0229b2ec"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,9 +470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7FSlHpuWI400",
-        "outputId": "10204852-3f30-4094-8f33-58dfa2f860b8"
+        "outputId": "271715c7-397d-4a68-a2c3-a0440b1f4e0e"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,24 +500,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zCclFlNeJXia",
-        "outputId": "7554614e-9975-4569-a272-38f743670bde"
+        "outputId": "c318f0b7-67c9-4fd0-c9d8-12f7ccbae11b"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tensor1:\n",
-            "tensor([[1, 0, 0],\n",
-            "        [1, 0, 0]])\n",
+            "tensor([[2, 3, 3],\n",
+            "        [4, 2, 2]])\n",
             "tensor2:\n",
-            "tensor([[4, 3, 2, 4],\n",
-            "        [2, 3, 2, 2],\n",
-            "        [2, 1, 3, 3]])\n",
+            "tensor([[2, 4, 4, 4],\n",
+            "        [3, 2, 2, 0],\n",
+            "        [4, 0, 0, 4]])\n",
             "tensor1 x tensor2 =\n",
-            "tensor([[4, 3, 2, 4],\n",
-            "        [4, 3, 2, 4]])\n"
+            "tensor([[25, 14, 14, 20],\n",
+            "        [22, 20, 20, 24]])\n"
           ]
         }
       ]
@@ -549,23 +549,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "84b04be2-75d9-41e8-ee4f-e4f2cb41318a"
+        "outputId": "ade71030-fef7-4d9e-cd04-69d0d12dc6ee"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tensor: \n",
-            "tensor([[1, 0, 0],\n",
-            "        [1, 0, 0]])\n",
-            "min : 0\n",
-            "max : 1\n",
-            "mean : 0.3333333432674408\n",
+            "tensor([[2, 3, 3],\n",
+            "        [4, 2, 2]])\n",
+            "min : 2\n",
+            "max : 4\n",
+            "mean : 2.6666667461395264\n",
             "float 32 tensor is: \n",
-            "tensor([[1., 0., 0.],\n",
-            "        [1., 0., 0.]])\n"
+            "tensor([[2., 3., 3.],\n",
+            "        [4., 2., 2.]])\n"
           ]
         }
       ]
@@ -600,19 +600,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqSyjVQlWqMx",
-        "outputId": "5758332a-b359-4b36-c630-1458d262d043"
+        "outputId": "3cb1dafd-3dd0-42dc-c68c-47bcddab6724"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tensor:\n",
-            "tensor([[1, 0, 0],\n",
-            "        [1, 0, 0]])\n",
-            "min index : 1 and minimum element is 0\n",
-            "max index : 0 and maximum element is 1\n",
+            "tensor([[2, 3, 3],\n",
+            "        [4, 2, 2]])\n",
+            "min index : 0 and minimum element is 2\n",
+            "max index : 3 and maximum element is 4\n",
             "\n",
             "\n",
             "tensor:\n",
@@ -656,9 +656,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qOt7ABkGe6Ix",
-        "outputId": "a0ac8a4e-075d-4e20-f859-16bb6d622512"
+        "outputId": "8900947a-988e-412f-aafd-54a519f98634"
       },
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lYCaoGWQitEu",
-        "outputId": "11353175-dcc5-496e-d59e-d0813eb586b9"
+        "outputId": "0b38c877-ebbb-4d68-820f-8e69bdd1b3bd"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -731,9 +731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d1o2tQB-kVjM",
-        "outputId": "d74c9c71-7335-4a51-c83b-b43129e6e135"
+        "outputId": "f6f8cd7e-c419-4838-b33f-10327c51e9a1"
       },
-      "execution_count": 28,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,16 +780,20 @@
         "z=x+2\n",
         "z=torch.stack([x,z,z*2])\n",
         "print(z,\"\\n\")\n",
-        "print(z.squeeze(),\"\\n\")\n"
+        "print(z.squeeze(),\"\\n\")\n",
+        "z=z.reshape(1,3,9)\n",
+        "print(z,\"\\n\")\n",
+        "z=z.squeeze()\n",
+        "print(z,\"\\n\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8MsDwtymt5q",
-        "outputId": "b5a46476-1b6e-4080-9aa9-61a53a2af89c"
+        "outputId": "0bca6097-b4e5-4aed-e332-6601d45bd75e"
       },
-      "execution_count": 34,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +808,108 @@
             "tensor([[ 5,  5,  5,  4,  5,  6,  7,  8,  9],\n",
             "        [ 7,  7,  7,  6,  7,  8,  9, 10, 11],\n",
             "        [14, 14, 14, 12, 14, 16, 18, 20, 22]]) \n",
+            "\n",
+            "tensor([[[ 5,  5,  5,  4,  5,  6,  7,  8,  9],\n",
+            "         [ 7,  7,  7,  6,  7,  8,  9, 10, 11],\n",
+            "         [14, 14, 14, 12, 14, 16, 18, 20, 22]]]) \n",
+            "\n",
+            "tensor([[ 5,  5,  5,  4,  5,  6,  7,  8,  9],\n",
+            "        [ 7,  7,  7,  6,  7,  8,  9, 10, 11],\n",
+            "        [14, 14, 14, 12, 14, 16, 18, 20, 22]]) \n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#unsqueze\n",
+        "tensor=torch.randint(low=5,high=45,size=(3,4))\n",
+        "print(f\"original tensor: \\n{tensor} \\nshape={tensor.shape}\")\n",
+        "print(f\"unsquezed at dim 0:\\n{tensor.unsqueeze(dim=0)}\\nshape = {tensor.unsqueeze(dim=0).shape}\")\n",
+        "print(f\"unsquezed at dim 1:\\n{tensor.unsqueeze(dim=1)}\\nshape = {tensor.unsqueeze(dim=1).shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WUj7tQ5NGNTJ",
+        "outputId": "24db0ada-3121-4937-88e1-64557a3f855d"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "original tensor: \n",
+            "tensor([[28, 17, 12, 10],\n",
+            "        [35, 16, 34, 40],\n",
+            "        [11, 13, 26, 11]]) \n",
+            "shape=torch.Size([3, 4])\n",
+            "unsquezed at dim 0:\n",
+            "tensor([[[28, 17, 12, 10],\n",
+            "         [35, 16, 34, 40],\n",
+            "         [11, 13, 26, 11]]])\n",
+            "shape = torch.Size([1, 3, 4])\n",
+            "unsquezed at dim 1:\n",
+            "tensor([[[28, 17, 12, 10]],\n",
+            "\n",
+            "        [[35, 16, 34, 40]],\n",
+            "\n",
+            "        [[11, 13, 26, 11]]])\n",
+            "shape = torch.Size([3, 1, 4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Permute**\n",
+        "permute changes the order of dimensions of a tensor<br>\n",
+        "**Example:**<br>\n",
+        "For an image tensor, we write torch.rand(size=(244,244,3)) i,e height,width, and color channels.<br>\n",
+        "For some reason now you want it as color channel,width,height ,<br>\n",
+        "you can do this using **permute**<br>\n",
+        "**note :**<br>\n",
+        " if you change anything in the permuted tensor, the original tensor will change as well"
+      ],
+      "metadata": {
+        "id": "eE-TZiX6IlY5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=torch.rand(size=(255,255,3))\n",
+        "print(f\"shape of tensor: {x.shape}\")\n",
+        "x_permuted=x.permute(2,0,1)\n",
+        "print(f\"shape of permuted tensor: {x_permuted.shape}\\n\")\n",
+        "y=torch.rand(3,2,1)\n",
+        "print(f\"shape of original tensor: {y.shape}\")\n",
+        "y_permuted=y.permute(2,0,1)  #2nd dimension becomes 0th dimension , 0th becomes 1st and 1st becomes 2nd dimension\n",
+        "print(f\"shape of permuted tensor: {y_permuted.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QlRoc2YAJf6n",
+        "outputId": "065b2ae9-3178-41d3-9aa6-be2a2b713002"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "shape of tensor: torch.Size([255, 255, 3])\n",
+            "shape of permuted tensor: torch.Size([3, 255, 255])\n",
+            "\n",
+            "shape of original tensor: torch.Size([3, 2, 1])\n",
+            "shape of permuted tensor: torch.Size([1, 3, 2])\n"
           ]
         }
       ]
